feat: Java 11到Java 25后端重构
Co-authored-by: traeagent <traeagent@users.noreply.github.com>