@@ -141,16 +141,13 @@ public class CancelProcessor extends AbstractCancelProcessor {
 	 * @param parentWorkId
 	 */
 	private void touchWork(String workId) {
-		new Thread(CancelProcessor.class.getName() + "_touchWork") {
-			@Override
-			public void run() {
-				try {
-					new Processing(new ProcessingAttributes()).processing(workId);
-				} catch (Exception e) {
-					LOGGER.error(e);
-				}
+		Thread.ofVirtual().name(CancelProcessor.class.getName() + "_touchWork").start(() -> {
+			try {
+				new Processing(new ProcessingAttributes()).processing(workId);
+			} catch (Exception e) {
+				LOGGER.error(e);
 			}
-		}.start();
+		});
 	}
 
 	@Override
